# pjatk_zum

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_ingestion/: README.md  common.py  config_utils.py
data_ingestion/asr_commands/: config.toml  run.py
data_ingestion/clip_multimodal/: config.toml  run.py
data_ingestion/sentiment_embeddings/: config.toml  run.py
evaluation/asr_commands/: data_utils.py  eval_utils.py  evaluate_asr_commands.ipynb  model_utils.py  unpack_model.py
evaluation/clip_multimodal/: data_utils.py  eval_utils.py  evaluate_clip_multimodal.ipynb  model_utils.py
evaluation/sentiment_embeddings/: data_utils.py  eval_utils.py  evaluate_sentiment_embeddings.ipynb  metrics.json  model_utils.py  unpack_model.py
notebooks/asr_commands/: README.md  eda.ipynb  helpers.py
notebooks/asr_commands/colab/: README.md  colab_training.ipynb
notebooks/clip_multimodal/: README.md  eda.ipynb  helpers.py
notebooks/clip_multimodal/colab/: README.md  colab_training.ipynb
notebooks/sentiment_embeddings/: README.md  eda.ipynb  helpers.py
notebooks/sentiment_embeddings/colab/: README.md  colab_training.ipynb
scripts/data_ingestion/: clear_cache.sh
utils/: paths.py
